--- a/graduation-system/app/src/main/resources/application.properties
+++ b/graduation-system/app/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=graduation-system
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.username=test
+spring.datasource.password=
