Add changes so far

--- a/graduation-system/app/src/main/resources/application.yml
+++ b/graduation-system/app/src/main/resources/application.yml
@@ -1,7 +1,23 @@
 server:
   port: 8080
+  # Error path to handle errors
+  error:
+    path: /error
+
+logging:
+  level:
+    root: ${LOGGING_LEVEL:TRACE}
 
 spring:
+  thymeleaf:
+    # Disable cache when developing which will not require restart when changes are made
+    cache: false
+  web:
+    resources:
+      add-mappings: false
+  mvc:
+    # Create custom 404 handler
+    throw-exception-if-no-handler-found: true
   jpa:
     generate-ddl: true
     hibernate:
@@ -19,3 +35,11 @@ spring:
       password: ${GRAD_SYSTEM_PASSWORD:graduation-system-admin}
       driverClassName: org.postgresql.Driver
       dialect: org.hibernate.dialect.PostgreSQLDialect
+
+# Spring security log
+org:
+  springframework:
+    boot:
+      autoconfigure:
+        security:
+          - category: INFO
